// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Container should render ById 1`] = `
<DocumentFragment>
  <article
    class="css-13dpkcn e1pwndow0"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Bob Cummings
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        Corporate Marketing Representative
      </aside>
    </header>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <aside
      class="css-y1qgjo e1pwndow1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              foodie, creator, designer 🏣
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render BySlug 1`] = `
<DocumentFragment>
  <article
    class="css-13dpkcn e1pwndow0"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Bob Cummings
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        Corporate Marketing Representative
      </aside>
    </header>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <aside
      class="css-y1qgjo e1pwndow1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              foodie, creator, designer 🏣
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-13dpkcn e1pwndow0"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Bob Cummings
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        Corporate Marketing Representative
      </aside>
    </header>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <aside
      class="css-y1qgjo e1pwndow1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              foodie, creator, designer 🏣
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-13dpkcn e1pwndow0"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Bob Cummings
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        Corporate Marketing Representative
      </aside>
    </header>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <aside
      class="css-y1qgjo e1pwndow1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              foodie, creator, designer 🏣
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
